--- a/bundle.yaml
+++ b/bundle.yaml
@@ -1,8 +1,8 @@
 apiVersion: "1"
 version: "1"
-id: "REPLACE_GITHUB_ORG-REPLACE_CONTROLLER_NAME"
-description: "CloudBees CI configuration bundle for the REPLACE_GITHUB_ORG REPLACE_CONTROLLER_NAME Controller"
-availabilityPattern: "REPLACE_AVAILABILITY_PATTERN"
+id: "CloudBees-CasC-Workshop-Alex-ops-controller"
+description: "CloudBees CI configuration bundle for the CloudBees-CasC-Workshop-Alex ops-controller Controller"
+availabilityPattern: "cloudbees-ci-casc-workshop/cloudbees-casc-workshop-alex/ops-controller"
 jcasc:
   - "jenkins.yaml"
 plugins:
